fix display on mobile

--- a/_sass/_lanyon.scss
+++ b/_sass/_lanyon.scss
@@ -97,7 +97,9 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .masthead {
-  padding-left: 2.5rem;
+  @media (min-width: $collapse-sidebar-min-width) {
+    padding-left: 2.5rem;
+  }
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 3rem;
@@ -299,10 +301,9 @@ a.sidebar-nav-item:focus {
   background-image:         linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
 }
 
-@media (min-width: 30.1em) {
-  .sidebar-toggle {
-    position: fixed;
-  }
+.sidebar-toggle {
+  position: fixed;
+  z-index: 2000;
 }
 
 @media print {
@@ -486,7 +487,7 @@ a.sidebar-nav-item:focus {
   box-shadow: .25rem 0 .5rem rgba(0,0,0,.1);
 }
 
-@media (min-width: 68em) {
+@media (min-width: $collapse-sidebar-min-width) {
   .sidebar-overlay #sidebar-checkbox:checked ~ .sidebar,
   .sidebar-overlay #sidebar-checkbox:checked ~ .sidebar-toggle {
     box-shadow: none;
